--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "joi": "^17.13.1",
     "lru-cache": "^10.2.2",
     "nestjs-twilio": "^4.4.0",
     "nodemailer": "^6.9.13",
